# loki-siem

./: README.md
analytics/: .gitignore  main.py  output.txt  pyproject.toml  visualization.py
infrastructure/: docker-compose.yaml
infrastructure/grafana/config/: grafana.ini
infrastructure/logstash/: .gitignore  Dockerfile
infrastructure/logstash/pipeline/: loki-logstash.conf
infrastructure/loki/: loki-local-config.yaml
log_generators/: .gitignore  README.md  main.py  pyproject.toml
log_generators/log_generators/: __init__.py  config_util.py  generators.py  log_generator.py  log_parser.py  parsers.py
log_generators/log_generators/dtos/: __init__.py  config.py  output.py
log_generators/log_generators/types/: __init__.py  config.py  custom_handlers.py  input.py  output.py
log_generators/log_generators/util/: __init__.py  reverse_read_file.py
pipelines/: .gitignore  README.md  pyproject.toml
pipelines/pipelines/: __init__.py  _util.py  util.py
pipelines/pipelines/anomalies/: __init__.py  anomalies.py  pca.py
pipelines/pipelines/features/: __init__.py  event_count_matrix.py  features.py  windowing.py
pipelines/pipelines/parsing/: __init__.py  parsing.py  preprocessing.py
pipelines/pipelines/parsing/drain/: __init__.py  apache_2k_config.py  apache_elfak_config.py  drain.py  util.py
pipelines/pipelines/parsing/drain/configs/: __init__.py  apache_elfak_config.py  apache_loghub.py  common.py  configs.py  configs_2k.py  configs_elfak.py  configs_proprietary.py  hadoop_loghub.py  openssh_loghub.py
pipelines/pipelines/parsing/drain3/: __init__.py  drain3.ini  drain3.py
pipelines/pipelines/utils/: __init__.py  functions.py  metrics_monitor.py
pipelines/pipelines/visualization/: __init__.py  plots.py  visualization.py
