[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["Mihajlo Madic <mihajlo.madic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.5.2"
websockets = "^14.1"
pydantic = "^2.10.3"
aiofiles = "^24.1.0"
numpy = "^2.2.0"
requests = "^2.32.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^5.24.1"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
flask = "3.0.0"

[tool.poetry.scripts]
analysis="main:main"
visualize="visualization:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
